[package]
name = "iced_async_screen_example"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.79"
iced = { git="https://github.com/iced-rs/iced", features = [ "image","tokio"] }
iced_aw = {git="https://github.com/iced-rs/iced_aw",features = ["sidebar", "icons"]}
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
